Spacing and Height issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -76,6 +76,7 @@ body {
 h1 {
     font-family: Metro, Helvetica, Verdana, Sans-Serif;
     text-shadow: 1px 1px 2px black, 0 0 25px #9D2737, 0 0 5px #9d0219;
+    margin: 20px;
 }
 h3 {
     text-align: center;
@@ -132,8 +133,7 @@ h4 {
     background-position: center;
     background-size: 80%;
     color: inherit;
-    padding: 20px 0 20px 0;
-    min-height: 200px;
+    padding: 40px 0 20px 0;
     text-shadow: 0px 0px 3px #000;
 }
 .p-starfarer {
@@ -191,6 +191,7 @@ a.btn-starfarer:focus, a.btn-starfarer:hover {
 }
 .card-img-top {
     width: 100%;
+    min-height: 200px;
 }
 .ben {
     display: block;
@@ -224,10 +225,6 @@ a.btn-starfarer:focus, a.btn-starfarer:hover {
 .involved-card:hover {
     border: 2px solid #9D2737;
 }
-/*.btn-primary, .btn-primary:focus, .btn-primary:hover {*/
-    /*background-color: #9D2737;*/
-    /*border-color: #9D2737;*/
-/*}*/
 
 /* Fleet Events */
 .events {
